# nanoGrid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_iteration.cpp  benchmark_spatial.cpp
cmake/: nanoGridConfig.cmake.in
include/nanogrid/: BufferRegion.hpp  CubicInterpolation.hpp  GridMap.hpp  GridMapMath.hpp  IndexHash.hpp  MapIndexer.hpp  NanOps.hpp  SubmapGeometry.hpp  TypeDefs.hpp  nanogrid.hpp
include/nanogrid/bridge/: ros1.hpp  ros2.hpp
include/nanogrid/bridge/ros/: impl.hpp
include/nanogrid/detail/: GridMapMath.hpp
include/nanogrid/eigen_plugins/: Functors.hpp  FunctorsPlugin.hpp
include/nanogrid/iterators/: GridMapIterator.hpp
src/: BufferRegion.cpp  CubicInterpolation.cpp  GridMap.cpp  GridMapMath.cpp  SubmapGeometry.cpp
src/iterators/: GridMapIterator.cpp
tests/: CMakeLists.txt  EigenPluginsTest.cpp  GridMapMathTest.cpp  GridMapTest.cpp  ModernApiTest.cpp  test_helpers.cpp  test_helpers.hpp
